--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "build:win:portable": "npm run build:pre && electron-builder --windows nsis:ia32 portable --config=buildAssets/builder/config.js",
     "build:mac": "npm run build:pre && electron-builder --mac --config=buildAssets/builder/config.js",
     "build:linux": "npm run build:pre && electron-builder --linux --config=buildAssets/builder/config.js",
-    "lint": "eslint . --ext .js,.ts,.tsx,.jsx src",
-    "lint:fix": "eslint . --ext .js,.ts,.tsx,.jsx --fix src",
+    "lint": "eslint . --ext .js,.ts,.tsx,.jsx .",
+    "lint:fix": "eslint . --ext .js,.ts,.tsx,.jsx --fix .",
     "format": "prettier .",
     "format:fix": "prettier . --write",
     "test": "npm run build:pre && playwright test",
@@ -72,6 +72,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-n": "^17.17.0",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.0.0",
