--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
+    "@electron/devtron": "^2.1.1",
     "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.57.0",
     "@types/react": "^19.2.8",
