--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: ['20', '22', '24']
+        node_version: ['22', '24']
         os: [windows-latest, macos-latest, ubuntu-latest]
 
     steps:
