--- a/package.json
+++ b/package.json
@@ -45,30 +45,30 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.7",
+    "@mui/material": "^7.3.8",
     "@reduxjs/toolkit": "^2.11.2",
-    "i18next": "^25.7.4",
-    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next": "^25.8.6",
+    "i18next-browser-languagedetector": "^8.2.1",
     "i18next-http-backend": "^3.0.2",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-i18next": "^16.5.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-i18next": "^16.5.4",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@electron/devtron": "^2.1.1",
-    "@eslint/js": "^9.39.2",
-    "@playwright/test": "^1.57.0",
-    "@types/react": "^19.2.8",
+    "@eslint/js": "9.39.2",
+    "@playwright/test": "^1.58.2",
+    "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/parser": "^8.53.0",
-    "@vitejs/plugin-react-swc": "^4.2.2",
-    "dotenv": "^17.2.3",
-    "electron": "^40.0.0",
-    "electron-builder": "^26.4.0",
+    "@typescript-eslint/parser": "^8.55.0",
+    "@vitejs/plugin-react-swc": "^4.2.3",
+    "dotenv": "^17.3.1",
+    "electron": "^40.4.0",
+    "electron-builder": "^26.7.0",
     "electron-extension-installer": "^2.0.1",
-    "eslint": "^9.39.2",
+    "eslint": "9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -76,12 +76,12 @@
     "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "globals": "^17.0.0",
+    "globals": "^17.3.0",
     "jiti": "^2.6.1",
-    "playwright": "^1.57.0",
-    "prettier": "^3.8.0",
+    "playwright": "^1.58.2",
+    "prettier": "^3.8.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.53.0",
+    "typescript-eslint": "^8.55.0",
     "vite": "^7.3.1",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
